// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots color blue 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-13j4h8v=""
  >
    <div
      data-css-1mceaus=""
    >
      blue
    </div>
  </div>
</div>
`;

exports[`Storyshots color green 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-g8uz7t=""
  >
    <div
      data-css-1mceaus=""
    >
      green
    </div>
  </div>
</div>
`;

exports[`Storyshots color red 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1j58ngq=""
  >
    <div
      data-css-1mceaus=""
    >
      red
    </div>
  </div>
</div>
`;

exports[`Storyshots color yellow 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-jrrxjl=""
  >
    <div
      data-css-1mceaus=""
    >
      yellow
    </div>
  </div>
</div>
`;

exports[`Storyshots onClick displays X 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-13j4h8v=""
  >
    <div
      data-css-1mceaus=""
    >
      this is the text
    </div>
    <button
      data-css-1j8ux48=""
      onClick={[Function]}
    >
      <div
        data-css-otejxm=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots onClick w/ long text 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-13j4h8v=""
  >
    <div
      data-css-1mceaus=""
    >
      this is the long text. this is the long text. this is the long text. this is the long text. this is the long text. this is the long text. this is the long text. this is the long text. this is the long text. this is the long text. this is the long text. this is the long text.
       
    </div>
    <button
      data-css-1j8ux48=""
      onClick={[Function]}
    >
      <div
        data-css-otejxm=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots styling child Link component auto-styled 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-13j4h8v=""
  >
    <div
      data-css-1mceaus=""
    >
      this is the text with an
       
      <a
        data-css-1skajya=""
        href="https://duckduckgo.com"
      >
        Link component
      </a>
      .
    </div>
  </div>
</div>
`;

exports[`Storyshots styling child anchor tag auto-styled 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-13j4h8v=""
  >
    <div
      data-css-1mceaus=""
    >
      this is the text with an 
      <a
        href="https://duckduckgo.com"
      >
        anchor tag
      </a>
      .
    </div>
  </div>
</div>
`;

exports[`Storyshots styling child anchor tag auto-styled in yellow 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-jrrxjl=""
  >
    <div
      data-css-1mceaus=""
    >
      this is the text with an 
      <a
        href="https://duckduckgo.com"
      >
        anchor tag
      </a>
      .
    </div>
  </div>
</div>
`;

exports[`Storyshots styling className prop  1`] = `
<div
  data-css-claeju=""
>
  <div
    className="someClass"
    data-css-13j4h8v=""
  >
    <div
      data-css-1mceaus=""
    >
      this is the text
    </div>
    <button
      data-css-1j8ux48=""
      onClick={[Function]}
    >
      <div
        data-css-otejxm=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots styling style prop  1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-13j4h8v=""
    style={
      Object {
        "outline": "3px solid red",
      }
    }
  >
    <div
      data-css-1mceaus=""
    >
      this is the text
    </div>
    <button
      data-css-1j8ux48=""
      onClick={[Function]}
    >
      <div
        data-css-otejxm=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;
